--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -20,9 +20,9 @@
     "build:cjs": "NODE_ENV=production BABEL_ENV=cjs babel --extensions \".ts,.tsx\" ./src --out-dir ./dist/cjs",
     "build:es": "NODE_ENV=production BABEL_ENV=es babel --extensions \".ts,.tsx\" ./src --out-dir ./dist/es",
     "build:dt": "tsc -p tsconfig.declarations.json --emitDeclarationOnly",
-    "ci": "yarn run lint && yarn run test --maxWorkers=2 && yarn run build",
-    "lint": "yarn run lint:tsc",
-    "lint:tsc": "tsc --noEmit",
+    "ci:build": "yarn run build",
+    "ci:lint": "tsc --noEmit",
+    "ci:test": "yarn run test --maxWorkers=2",
     "start": "concurrently \"yarn:build:* --watch\"",
     "test": "BABEL_ENV=test jest",
     "test:watch": "yarn run test --watch",
