--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -35,8 +35,9 @@
     "@babel/runtime": "^7.12.1",
     "@bigcommerce/big-design-icons": "^0.14.1",
     "@bigcommerce/big-design-theme": "^0.11.0",
-    "@popperjs/core": "^2.2.1",
-    "downshift": "6.0.6",
+    "@popperjs/core": "^2.5.4",
+    "@types/react-datepicker": "^2.11.0",
+    "downshift": "6.1.0",
     "focus-trap": "^5.1.0",
     "polished": "^3.0.3",
     "react-beautiful-dnd": "^13.0.0",
