chore: use fork with ts fixes, add missing flags

--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -55,6 +55,7 @@
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@bigcommerce/configs": "^0.14.0",
+    "@jorgemoya/flag-icon-css": "3.5.0",
     "@svgr/core": "^5.0.1",
     "@svgr/plugin-jsx": "^5.0.1",
     "@svgr/plugin-prettier": "^5.0.1",
@@ -64,7 +65,6 @@
     "@types/styled-components": "^4.1.12",
     "babel-plugin-styled-components": "^1.10.6",
     "camelcase": "^5.3.1",
-    "flag-icon-css": "^3.5.0",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.4",
     "glob-promise": "^3.4.0",
