--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -36,17 +36,18 @@
   "dependencies": {
     "@babel/runtime": "^7.12.1",
     "@bigcommerce/big-design-theme": "^0.12.0",
-    "react-uid": "^2.2.0"
+    "react-uid": "^2.3.1"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0",
     "styled-components": "^4.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "@babel/plugin-transform-object-assign": "^7.12.1",
@@ -60,8 +61,8 @@
     "@svgr/plugin-jsx": "^5.0.1",
     "@svgr/plugin-prettier": "^5.0.1",
     "@svgr/plugin-svgo": "^5.0.1",
-    "@types/react": "^16.8.8",
-    "@types/react-dom": "^16.8.5",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/styled-components": "^4.1.12",
     "babel-plugin-styled-components": "^1.10.6",
     "camelcase": "^5.3.1",
@@ -69,11 +70,11 @@
     "glob": "^7.1.4",
     "glob-promise": "^3.4.0",
     "inquirer": "^7.0.4",
-    "inquirer-autocomplete-prompt": "^1.0.1",
+    "inquirer-autocomplete-prompt": "^1.3.0",
     "node-fetch": "^2.6.0",
     "prettier": "^2.0.5",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
     "styled-components": "^4.3.0",
     "typescript": "~3.8.3",
