--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -36,24 +36,25 @@
     "@bigcommerce/big-design-icons": "^0.16.0",
     "@bigcommerce/big-design-theme": "^0.12.0",
     "@popperjs/core": "^2.5.4",
-    "@types/react-datepicker": "^2.11.0",
+    "@types/react-datepicker": "^3.1.5",
     "downshift": "6.1.0",
     "focus-trap": "^5.1.0",
     "polished": "^3.0.3",
     "react-beautiful-dnd": "^13.0.0",
-    "react-datepicker": "^2.16.0",
-    "react-popper": "^2.2.3",
-    "react-uid": "^2.2.0"
+    "react-datepicker": "^3.6.0",
+    "react-popper": "^2.2.4",
+    "react-uid": "^2.3.1"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0",
     "styled-components": "^4.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
     "@babel/plugin-transform-object-assign": "^7.12.1",
@@ -67,20 +68,19 @@
     "@testing-library/react-hooks": "^3.2.1",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.1.8",
-    "@types/react": "^16.8.8",
+    "@types/react": "^17.0.2",
     "@types/react-beautiful-dnd": "^13.0.0",
-    "@types/react-datepicker": "^2.11.0",
-    "@types/react-dom": "^16.8.5",
-    "@types/react-test-renderer": "^16.8.3",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^4.1.12",
     "babel-jest": "^25.4.0",
     "babel-plugin-styled-components": "^1.10.6",
     "concurrently": "^5.0.0",
     "jest": "^25.4.0",
     "jest-styled-components": "^6.3.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-test-renderer": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-test-renderer": "^17.0.1",
     "rimraf": "^3.0.2",
     "styled-components": "^4.3.0",
     "typescript": "~3.8.3",
