--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -43,7 +43,8 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-datepicker": "^3.6.0",
     "react-popper": "^2.2.4",
-    "react-uid": "^2.3.1"
+    "react-uid": "^2.3.1",
+    "zustand": "^3.3.3"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
