chore(release): publish
 - @bigcommerce/big-design-icons@0.17.0-alpha.0
 - @bigcommerce/big-design-theme@0.13.0-alpha.0
 - @bigcommerce/big-design@0.30.0-alpha.0
 - @bigcommerce/configs@0.15.0-alpha.0
 - @bigcommerce/docs@0.30.0-alpha.0
 - @bigcommerce/examples@0.17.0-alpha.0

--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/configs",
-  "version": "0.14.1",
+  "version": "0.15.0-alpha.0",
   "private": true,
   "license": "SEE LICENSE IN LICENSE.md",
   "dependencies": {
