--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/big-design-theme",
-  "version": "0.12.1",
+  "version": "0.13.0-alpha.0",
   "sideEffects": false,
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -51,7 +51,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
-    "@bigcommerce/configs": "^0.14.1",
+    "@bigcommerce/configs": "^0.15.0-alpha.0",
     "@types/jest": "^25.2.1",
     "@types/styled-components": "^4.1.12",
     "babel-jest": "^25.5.1",
