--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -77,7 +77,7 @@
     "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
     "styled-components": "^4.3.0",
-    "typescript": "~3.8.3",
+    "typescript": "^4.3.5",
     "typescript-styled-plugin": "^0.15.0"
   }
 }
