--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/big-design",
-  "version": "0.30.0-alpha.4",
+  "version": "0.30.0",
   "sideEffects": false,
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -33,8 +33,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
-    "@bigcommerce/big-design-icons": "^0.17.0-alpha.2",
-    "@bigcommerce/big-design-theme": "^0.13.0-alpha.2",
+    "@bigcommerce/big-design-icons": "^0.17.0",
+    "@bigcommerce/big-design-theme": "^0.13.0",
     "@popperjs/core": "^2.5.4",
     "@types/react-datepicker": "^3.1.5",
     "downshift": "6.1.0",
@@ -63,7 +63,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
-    "@bigcommerce/configs": "^0.15.0-alpha.1",
+    "@bigcommerce/configs": "^0.15.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^9.4.0",
     "@testing-library/react-hooks": "^3.2.1",
