--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/docs",
-  "version": "0.30.0-alpha.4",
+  "version": "0.30.0",
   "private": true,
   "sideEffects": false,
   "license": "SEE LICENSE IN LICENSE.md",
@@ -23,9 +23,9 @@
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@babel/standalone": "^7.12.4",
-    "@bigcommerce/big-design": "^0.30.0-alpha.4",
-    "@bigcommerce/big-design-icons": "^0.17.0-alpha.2",
-    "@bigcommerce/big-design-theme": "^0.13.0-alpha.2",
+    "@bigcommerce/big-design": "^0.30.0",
+    "@bigcommerce/big-design-icons": "^0.17.0",
+    "@bigcommerce/big-design-theme": "^0.13.0",
     "clipboard-copy": "^3.1.0",
     "prettier": "^2.0.5",
     "prism-react-renderer": "^1.0.2",
@@ -36,8 +36,8 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@bigcommerce/configs": "^0.15.0-alpha.1",
-    "@bigcommerce/examples": "^0.17.0-alpha.4",
+    "@bigcommerce/configs": "^0.15.0",
+    "@bigcommerce/examples": "^0.17.0",
     "@types/gtag.js": "^0.0.3",
     "@types/node": "^13.1.8",
     "@types/prettier": "^2.0.1",
