--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@bigcommerce/examples",
   "private": true,
-  "version": "0.17.0-alpha.4",
+  "version": "0.17.0",
   "scripts": {
     "start": "parcel index.html",
     "ci": "tsc --noEmit && parcel build index.html"
   },
   "dependencies": {
-    "@bigcommerce/big-design": "^0.30.0-alpha.4",
-    "@bigcommerce/big-design-icons": "^0.17.0-alpha.2",
-    "@bigcommerce/big-design-theme": "^0.13.0-alpha.2",
+    "@bigcommerce/big-design": "^0.30.0",
+    "@bigcommerce/big-design-icons": "^0.17.0",
+    "@bigcommerce/big-design-theme": "^0.13.0",
     "formik": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
