--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -37,6 +37,7 @@
     "@bigcommerce/big-design-theme": "^0.13.1",
     "@popperjs/core": "^2.5.4",
     "@types/react-datepicker": "^3.1.5",
+    "date-fns": "^2.23.0",
     "downshift": "6.1.0",
     "focus-trap": "^5.1.0",
     "polished": "^4.0.0",
