--- a/packages/configs/ts/tsconfig.json
+++ b/packages/configs/ts/tsconfig.json
@@ -6,7 +6,7 @@
     "importHelpers": true,
     "isolatedModules": true,
     "jsx": "react",
-    "lib": ["dom", "es2015", "es2016"],
+    "lib": ["dom", "es2015", "es2016", "es2019"],
     "module": "esnext",
     "moduleResolution": "node",
     "noUnusedLocals": true,
