--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -77,6 +77,7 @@
     "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
     "styled-components": "^5.3.0",
+    "tiny-async-pool": "^1.2.0",
     "typescript": "^4.4.3",
     "typescript-styled-plugin": "^0.18.1"
   }
