chore(all): update project npm scripts

--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   ],
   "scripts": {
     "build": "lerna run build --stream",
+    "build:icons": "yarn workspace @bigcommerce/big-design-icons run build",
     "ci": "lerna run ci --stream",
     "diff": "lerna diff",
     "lint": "eslint . --ext .ts,.tsx,.js",
-    "start": "lerna run start --stream --parallel --ignore @bigcommerce/examples",
+    "start": "yarn workspace @bigcommerce/docs run start",
     "test": "lerna run test --stream"
   },
   "husky": {
