--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "0.17.2",
   "scripts": {
-    "start": "parcel index.html",
-    "ci": "tsc --noEmit && parcel build index.html"
+    "start": "vite",
+    "ci": "tsc && vite build"
   },
   "dependencies": {
     "@bigcommerce/big-design": "^0.30.2",
@@ -17,13 +17,12 @@
     "yup": "^0.28.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/styled-components": "^5.1.11",
     "@types/yup": "^0.26.24",
-    "parcel": "^2.0.0-beta.2",
-    "postcss": "^8.2.15",
-    "typescript": "^4.4.3"
+    "@vitejs/plugin-react": "^1.0.0",
+    "typescript": "^4.4.3",
+    "vite": "^2.6.0"
   }
 }
