--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -15,14 +15,12 @@
     "build:cjs": "NODE_ENV=production BABEL_ENV=cjs babel --extensions \".ts,.tsx\" ./src --out-dir ./dist/cjs",
     "build:es": "NODE_ENV=production BABEL_ENV=es babel --extensions \".ts,.tsx\" ./src --out-dir ./dist/es",
     "build:dt": "tsc --emitDeclarationOnly",
-    "ci": "yarn run lint && yarn run test --maxWorkers=2 --coverage && yarn run build",
-    "lint": "yarn run lint:tsc",
-    "lint:tsc": "tsc --noEmit",
-    "prepublishOnly": "rimraf dist && yarn run ci",
+    "prepublishOnly": "rimraf dist && yarn run typeCheck && yarn run test && yarn run build",
     "prepack": "big-design-prepack",
     "postpack": "big-design-postpack",
     "test": "BABEL_ENV=test jest",
-    "test:watch": "yarn run test --watch"
+    "test:watch": "yarn run test --watch",
+    "typeCheck": "tsc --noEmit"
   },
   "files": [
     "dist"
