--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -20,10 +20,8 @@
     "build:icons": "node scripts/build.js",
     "build:flags": "node scripts/build-flags.js",
     "download": "node scripts/downloader.js",
-    "ci": "yarn run lint && yarn run build",
-    "lint": "yarn run lint:tsc",
-    "lint:tsc": "tsc --noEmit",
-    "prepublishOnly": "rimraf dist && yarn run ci"
+    "prepublishOnly": "rimraf dist && yarn run typeCheck && yarn run build",
+    "typeCheck": "tsc --noEmit"
   },
   "files": [
     "dist",
