--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "lerna": "^4.0.0",
     "lint-staged": "^9.2.0",
     "prettier": "^2.4.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "@nrwl/workspace": "^12.10.0",
+    "@nrwl/cli": "^12.10.0",
+    "@nrwl/tao": "^12.10.0"
   },
   "resolutions": {
     "is-svg": "^4.3.1",
