chore(ci): initial nx cloud test

--- a/nx.json
+++ b/nx.json
@@ -3,9 +3,10 @@
   "npmScope": "big-design",
   "tasksRunnerOptions": {
     "default": {
-      "runner": "@nrwl/workspace/tasks-runners/default",
+      "runner": "@nrwl/nx-cloud",
       "options": {
-        "cacheableOperations": ["build", "test", "lint"]
+        "cacheableOperations": ["build", "test", "lint"],
+        "accessToken": ""
       }
     }
   },
