--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@4.7.0
+  nx: nrwl/nx@1.0.0
 
 #################################################################################
 # Aliases
@@ -62,6 +63,10 @@ commands:
       - node/install-yarn:
           version: 1.22.15
       - yarn-install
+      - run:
+          name: 'Set NX env vars'
+          command: |
+            echo "export NX_CLOUD_ACCESS_TOKEN=${NX_CLOUD_ACCESS_TOKEN}" >> $BASH_ENV
 
   attach-built-icons:
     steps:
@@ -72,86 +77,26 @@ commands:
 # Jobs
 #################################################################################
 jobs:
-  build-icons:
+  agent:
     <<: *default_executor
-
+    environment:
     steps:
       - pre-setup
-      - run: yarn workspace @bigcommerce/big-design-icons run build
-      - persist_to_workspace:
-          root: .
-          paths:
-            - packages/big-design-icons/dist
+      - run: yarn nx-cloud start-agent
 
-  build-theme:
+  main:
     <<: *default_executor
-
+    environment:
+      NX_CLOUD_DISTRIBUTED_EXECUTION: 'true'
+      NX_VERBOSE_LOGGING: 'true'
     steps:
       - pre-setup
-      - run: yarn workspace @bigcommerce/big-design-theme run build
-
-  build-big-design:
-    <<: *default_executor
-
-    steps:
-      - pre-setup
-      - attach-built-icons
-      - run: yarn workspace @bigcommerce/big-design run build
-
-  build-examples:
-    <<: *default_executor
-
-    steps:
-      - pre-setup
-      - attach-built-icons
-      - run: yarn workspace @bigcommerce/examples run build
-
-  build-docs:
-    <<: *default_executor
-
-    parameters:
-      cache-version:
-        type: string
-        default: v1
-        description: Change the next.js cache version if you need to clear the cache for any reason.
-
-    steps:
-      - pre-setup
-      - attach-built-icons
-      - restore_cache:
-          keys:
-            - nextjs-<<parameters.cache-version>>-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
-            - nextjs-<<parameters.cache-version>>-{{ checksum "package.json" }}
-            - nextjs-<<parameters.cache-version>>
-      - run: yarn workspace @bigcommerce/docs run build
-      - save_cache:
-          key: nextjs-<<parameters.cache-version>>-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
-          paths:
-            - packages/docs/.next
-
-  typeCheck:
-    <<: *default_executor
-
-    steps:
-      - pre-setup
-      - attach-built-icons
-      - run: yarn run ci:typeCheck
-
-  lint:
-    <<: *default_executor
-
-    steps:
-      - pre-setup
-      - attach-built-icons
-      - run: yarn run lint
-
-  test:
-    <<: *default_executor
-
-    steps:
-      - pre-setup
-      - attach-built-icons
-      - run: yarn run ci:test
+      - nx/set-shas
+      - run: yarn nx affected --base=$NX_BASE --target=build --parallel --max-parallel=3
+      - run: yarn nx affected --base=$NX_BASE --target=test --parallel --max-parallel=2
+      # Lint
+      # typeCheck
+      - run: yarn nx-cloud stop-all-agents
 
 #################################################################################
 # Workflows
@@ -160,38 +105,17 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build-icons:
+      - agent:
           <<: *filter_branch
+          name: 'agent1'
 
-      - build-theme:
+      - agent:
           <<: *filter_branch
+          name: 'agent2'
 
-      - build-big-design:
+      - agent:
           <<: *filter_branch
-          requires:
-            - build-icons
+          name: 'agent3'
 
-      - build-examples:
+      - main:
           <<: *filter_branch
-          requires:
-            - build-icons
-
-      - build-docs:
-          <<: *filter_branch
-          requires:
-            - build-icons
-
-      - typeCheck:
-          <<: *filter_branch
-          requires:
-            - build-icons
-
-      - lint:
-          <<: *filter_branch
-          requires:
-            - build-icons
-
-      - test:
-          <<: *filter_branch
-          requires:
-            - build-icons
