--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@nrwl/cli": "^12.10.0",
+    "@nrwl/tao": "^12.10.0",
+    "@nrwl/workspace": "^12.10.0",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
@@ -43,13 +46,13 @@
     "lerna": "^4.0.0",
     "lint-staged": "^9.2.0",
     "prettier": "^2.4.0",
-    "typescript": "^4.4.3",
-    "@nrwl/workspace": "^12.10.0",
-    "@nrwl/cli": "^12.10.0",
-    "@nrwl/tao": "^12.10.0"
+    "typescript": "^4.4.3"
   },
   "resolutions": {
     "is-svg": "^4.3.1",
     "node-notifier": "^8.0.1"
+  },
+  "dependencies": {
+    "@nrwl/nx-cloud": "^12.3.13"
   }
 }
