--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@4.7.0
+  nx: nrwl/nx@1.0.0
 
 #################################################################################
 # Aliases
@@ -62,6 +63,9 @@ commands:
       - node/install-yarn:
           version: 1.22.15
       - yarn-install
+      - nx/set-shas:
+          main-branch-name: master
+      - attach-built-icons
 
   attach-built-icons:
     steps:
@@ -72,86 +76,67 @@ commands:
 # Jobs
 #################################################################################
 jobs:
-  build-icons:
+  agent:
     <<: *default_executor
-
+    environment:
     steps:
       - pre-setup
-      - run: yarn workspace @bigcommerce/big-design-icons run build
+      - run: yarn nx-cloud start-agent
+
+  build-icons:
+    <<: *default_executor
+    steps:
+      - pre-setup
+      - run: yarn nx run @bigcommerce/big-design-icons:build
       - persist_to_workspace:
           root: .
           paths:
             - packages/big-design-icons/dist
 
-  build-theme:
+  build:
     <<: *default_executor
-
+    environment:
+      # NX_CLOUD_DISTRIBUTED_EXECUTION: 'true'
     steps:
       - pre-setup
-      - run: yarn workspace @bigcommerce/big-design-theme run build
-
-  build-big-design:
-    <<: *default_executor
-
-    steps:
-      - pre-setup
-      - attach-built-icons
-      - run: yarn workspace @bigcommerce/big-design run build
-
-  build-examples:
-    <<: *default_executor
-
-    steps:
-      - pre-setup
-      - attach-built-icons
-      - run: yarn workspace @bigcommerce/examples run build
-
-  build-docs:
-    <<: *default_executor
-
-    parameters:
-      cache-version:
-        type: string
-        default: v1
-        description: Change the next.js cache version if you need to clear the cache for any reason.
-
-    steps:
-      - pre-setup
-      - attach-built-icons
-      - restore_cache:
-          keys:
-            - nextjs-<<parameters.cache-version>>-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
-            - nextjs-<<parameters.cache-version>>-{{ checksum "package.json" }}
-            - nextjs-<<parameters.cache-version>>
-      - run: yarn workspace @bigcommerce/docs run build
-      - save_cache:
-          key: nextjs-<<parameters.cache-version>>-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
-          paths:
-            - packages/docs/.next
-
-  typeCheck:
-    <<: *default_executor
-
-    steps:
-      - pre-setup
-      - attach-built-icons
-      - run: yarn run ci:typeCheck
-
-  lint:
-    <<: *default_executor
-
-    steps:
-      - pre-setup
-      - attach-built-icons
-      - run: yarn run lint
+      - run: yarn nx affected --base=$NX_BASE --target=build --exclude=@bigcommerce/docs,@bigcommerce/big-design-icons --parallel
 
   test:
     <<: *default_executor
-
+    environment:
+      # NX_CLOUD_DISTRIBUTED_EXECUTION: 'true'
     steps:
       - pre-setup
-      - attach-built-icons
-      - run: yarn run ci:test
+      - run: yarn nx affected --base=$NX_BASE --target=test --parallel
+
+  typeCheck:
+    <<: *default_executor
+    environment:
+      # NX_CLOUD_DISTRIBUTED_EXECUTION: 'true'
+    steps:
+      - pre-setup
+      - run: yarn nx affected --base=$NX_BASE --target=typeCheck --parallel
+
+  build-docs:
+    <<: *default_executor
+    steps:
+      - pre-setup
+      - restore_cache:
+          keys:
+            - nextjs-nx-cache-v2-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
+            - nextjs-nx-cache-v2-{{ checksum "package.json" }}
+            - nextjs-nx-cache-v2
+      - run: yarn nx run @bigcommerce/docs:build
+      - save_cache:
+          key: nextjs-nx-cache-v2-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
+          paths:
+            - packages/docs/.next
+
+  stop-agents:
+    <<: *default_executor
+    steps:
+      - pre-setup
+      - run: yarn nx-cloud stop-all-agents
 
 #################################################################################
 # Workflows
@@ -160,23 +145,26 @@ workflows:
   version: 2
   build_and_test:
     jobs:
+      # - agent:
+      #     <<: *filter_branch
+      #     name: 'agent1'
+
+      # - agent:
+      #     <<: *filter_branch
+      #     name: 'agent2'
+
+      # - agent:
+      #     <<: *filter_branch
+      #     name: 'agent3'
       - build-icons:
           <<: *filter_branch
 
-      - build-theme:
-          <<: *filter_branch
-
-      - build-big-design:
+      - build:
           <<: *filter_branch
           requires:
             - build-icons
 
-      - build-examples:
-          <<: *filter_branch
-          requires:
-            - build-icons
-
-      - build-docs:
+      - test:
           <<: *filter_branch
           requires:
             - build-icons
@@ -186,12 +174,13 @@ workflows:
           requires:
             - build-icons
 
-      - lint:
+      - build-docs:
           <<: *filter_branch
           requires:
             - build-icons
 
-      - test:
-          <<: *filter_branch
-          requires:
-            - build-icons
+      # - stop-agents:
+      #     <<: *filter_branch
+      #     requires:
+      #       - build
+      #       - test
