Remove duplicate license files.

--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/bigcommerce/big-design.git",
     "directory": "packages/big-design"
   },
-  "license": "SEE LICENSE IN LICENSE.md",
+  "license": "(MIT AND CC BY 3.0)",
   "files": [
     "dist"
   ],
