--- a/packages/pack/package.json
+++ b/packages/pack/package.json
@@ -2,7 +2,7 @@
   "name": "@bigcommerce/pack",
   "version": "0.1.0",
   "private": true,
-  "license": "SEE LICENSE IN LICENSE.md",
+  "license": "(MIT AND CC BY 3.0)",
   "bin": {
     "big-design-prepack": "./prepack.js",
     "big-design-postpack": "./postpack.js"
