--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -3,7 +3,7 @@
   "version": "0.13.1",
   "sideEffects": false,
   "main": "src/index.ts",
-  "license": "SEE LICENSE IN LICENSE.md",
+  "license": "(MIT AND CC BY 3.0)",
   "author": "BigCommerce Inc",
   "repository": {
     "type": "git",
