--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -2,7 +2,7 @@
   "name": "@bigcommerce/configs",
   "version": "0.15.1",
   "private": true,
-  "license": "SEE LICENSE IN LICENSE.md",
+  "license": "(MIT AND CC BY 3.0)",
   "dependencies": {
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
