chore(release): publish
 - @bigcommerce/big-design-icons@0.17.2-alpha.0
 - @bigcommerce/big-design-theme@0.13.2-alpha.0
 - @bigcommerce/big-design@0.30.3-alpha.0
 - @bigcommerce/configs@0.15.2-alpha.0
 - @bigcommerce/docs@0.30.3-alpha.0
 - @bigcommerce/examples@0.17.3-alpha.0
 - @bigcommerce/pack@0.1.1-alpha.0

--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/configs",
-  "version": "0.15.1",
+  "version": "0.15.2-alpha.0",
   "private": true,
   "license": "(MIT AND CC BY 3.0)",
   "dependencies": {
