--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/big-design",
-  "version": "0.30.2",
+  "version": "0.30.3-alpha.0",
   "sideEffects": false,
   "main": "src/index.ts",
   "author": "BigCommerce Inc",
@@ -33,8 +33,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.15.4",
-    "@bigcommerce/big-design-icons": "^0.17.1",
-    "@bigcommerce/big-design-theme": "^0.13.1",
+    "@bigcommerce/big-design-icons": "^0.17.2-alpha.0",
+    "@bigcommerce/big-design-theme": "^0.13.2-alpha.0",
     "@popperjs/core": "^2.5.4",
     "@types/react-datepicker": "^3.1.5",
     "downshift": "6.1.0",
@@ -58,8 +58,8 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.15.0",
-    "@bigcommerce/configs": "^0.15.1",
-    "@bigcommerce/pack": "^0.1.0",
+    "@bigcommerce/configs": "^0.15.2-alpha.0",
+    "@bigcommerce/pack": "^0.1.1-alpha.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
