--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/docs",
-  "version": "0.30.2",
+  "version": "0.30.3-alpha.0",
   "private": true,
   "sideEffects": false,
   "license": "(MIT AND CC BY 3.0)",
@@ -21,9 +21,9 @@
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/standalone": "^7.15.6",
-    "@bigcommerce/big-design": "^0.30.2",
-    "@bigcommerce/big-design-icons": "^0.17.1",
-    "@bigcommerce/big-design-theme": "^0.13.1",
+    "@bigcommerce/big-design": "^0.30.3-alpha.0",
+    "@bigcommerce/big-design-icons": "^0.17.2-alpha.0",
+    "@bigcommerce/big-design-theme": "^0.13.2-alpha.0",
     "clipboard-copy": "^3.1.0",
     "next-transpile-modules": "^8.0.0",
     "prettier": "^2.4.0",
@@ -35,8 +35,8 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@bigcommerce/configs": "^0.15.1",
-    "@bigcommerce/examples": "^0.17.2",
+    "@bigcommerce/configs": "^0.15.2-alpha.0",
+    "@bigcommerce/examples": "^0.17.3-alpha.0",
     "@types/gtag.js": "^0.0.3",
     "@types/node": "^13.1.8",
     "@types/prettier": "^2.0.1",
