--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@bigcommerce/examples",
   "private": true,
-  "version": "0.17.2",
+  "version": "0.17.3-alpha.0",
   "scripts": {
     "build": "vite build",
     "start": "vite",
     "typeCheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@bigcommerce/big-design": "^0.30.2",
-    "@bigcommerce/big-design-icons": "^0.17.1",
-    "@bigcommerce/big-design-theme": "^0.13.1",
+    "@bigcommerce/big-design": "^0.30.3-alpha.0",
+    "@bigcommerce/big-design-icons": "^0.17.2-alpha.0",
+    "@bigcommerce/big-design-theme": "^0.13.2-alpha.0",
     "formik": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
