test(component): refactor Button component tests

--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -60,9 +60,11 @@
     "@babel/preset-typescript": "^7.15.0",
     "@bigcommerce/configs": "^0.15.2-alpha.0",
     "@bigcommerce/pack": "^0.1.1-alpha.0",
+    "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^13.1.8",
     "@types/react": "^17.0.2",
