--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -3,7 +3,7 @@
   "version": "0.13.2-alpha.0",
   "sideEffects": false,
   "main": "src/index.ts",
-  "license": "(MIT AND CC BY 3.0)",
+  "license": "(MIT AND CC-BY-3.0)",
   "author": "BigCommerce Inc",
   "repository": {
     "type": "git",
