chore(deps): update deps

--- a/packages/docs/tsconfig.json
+++ b/packages/docs/tsconfig.json
@@ -9,7 +9,8 @@
     "resolveJsonModule": true,
     "jsx": "preserve",
     "noUnusedLocals": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
