--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
@@ -41,12 +40,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.2.5",
     "lerna": "^4.0.0",
-    "lint-staged": "^9.2.0",
+    "lint-staged": "^12.1.7",
     "prettier": "^2.4.0",
     "typescript": "^4.4.3"
-  },
-  "resolutions": {
-    "is-svg": "^4.3.1",
-    "node-notifier": "^8.0.1"
   }
 }
