--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -6,6 +6,7 @@
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
