--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -3,7 +3,7 @@
   "version": "0.13.2-alpha.0",
   "sideEffects": false,
   "main": "src/index.ts",
-  "license": "(MIT AND CC BY 3.0)",
+  "license": "(MIT AND CC-BY-3.0)",
   "author": "BigCommerce Inc",
   "repository": {
     "type": "git",
@@ -52,10 +52,10 @@
     "@types/jest": "^27.0.2",
     "@types/styled-components": "^5.1.11",
     "babel-jest": "^27.2.5",
-    "babel-plugin-styled-components": "^1.13.2",
+    "babel-plugin-styled-components": "^2.0.2",
     "concurrently": "^6.2.1",
     "jest": "^27.2.5",
-    "jest-styled-components": "^7.0.5",
+    "jest-styled-components": "^7.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
