--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -3,7 +3,7 @@
   "version": "0.30.3-alpha.1",
   "private": true,
   "sideEffects": false,
-  "license": "(MIT AND CC BY 3.0)",
+  "license": "(MIT AND CC-BY-3.0)",
   "author": "BigCommerce Inc",
   "repository": {
     "type": "git",
@@ -43,9 +43,9 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/styled-components": "^5.1.11",
-    "babel-plugin-styled-components": "^1.13.2",
+    "babel-plugin-styled-components": "^2.0.2",
     "jsx-to-string-loader": "^1.2.0",
-    "next": "^11.1.2",
+    "next": "^12.0.8",
     "push-dir": "^0.4.1",
     "typescript": "^4.4.3",
     "typescript-styled-plugin": "^0.18.1"
