refactor(all): pr comments

--- a/packages/big-design/tsconfig.json
+++ b/packages/big-design/tsconfig.json
@@ -6,7 +6,7 @@
     "declarationDir": "dist",
     "declarationMap": true,
     "paths": {
-      "@test/*": ["tests/*"]
+      "@test/utils": ["tests/utils"]
     }
   },
   "include": ["src", "setupTests.ts", "tests"]
