chore: fix tsconfig include field

--- a/packages/big-design-icons/tsconfig.json
+++ b/packages/big-design-icons/tsconfig.json
@@ -10,6 +10,6 @@
     "target": "esnext",
     "tsBuildInfoFile": "./.tsbuildinfo",
   },
-  "includes": ["src"],
+  "include": ["src"],
   "exclude": ["dist", "node_modules", "scripts", "svgs"],
 }
