chore(release): publish
 - @bigcommerce/big-design-icons@0.19.2-alpha.0
 - @bigcommerce/big-design-theme@0.15.1-alpha.0
 - @bigcommerce/big-design@0.32.2-alpha.0
 - @bigcommerce/docs@0.32.2-alpha.0
 - @bigcommerce/examples@0.19.2-alpha.0

--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/big-design-theme",
-  "version": "0.15.0",
+  "version": "0.15.1-alpha.0",
   "sideEffects": false,
   "main": "src/index.ts",
   "license": "(MIT AND CC-BY-3.0)",
