--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/big-design-icons",
-  "version": "0.19.1",
+  "version": "0.19.2-alpha.0",
   "sideEffects": false,
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.15.4",
-    "@bigcommerce/big-design-theme": "^0.15.0",
+    "@bigcommerce/big-design-theme": "^0.15.1-alpha.0",
     "react-uid": "^2.3.1"
   },
   "peerDependencies": {
