chore(release): publish
 - @bigcommerce/big-design-icons@0.20.0
 - @bigcommerce/big-design-theme@0.16.0
 - @bigcommerce/big-design@0.33.0
 - @bigcommerce/docs@0.33.0
 - @bigcommerce/examples@0.20.0

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/docs",
-  "version": "0.32.2-alpha.0",
+  "version": "0.33.0",
   "private": true,
   "sideEffects": false,
   "license": "(MIT AND CC-BY-3.0)",
@@ -22,9 +22,9 @@
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/standalone": "^7.15.6",
-    "@bigcommerce/big-design": "^0.32.2-alpha.0",
-    "@bigcommerce/big-design-icons": "^0.19.2-alpha.0",
-    "@bigcommerce/big-design-theme": "^0.15.1-alpha.0",
+    "@bigcommerce/big-design": "^0.33.0",
+    "@bigcommerce/big-design-icons": "^0.20.0",
+    "@bigcommerce/big-design-theme": "^0.16.0",
     "clipboard-copy": "^4.0.1",
     "next-transpile-modules": "^9.0.0",
     "prettier": "^2.4.0",
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@bigcommerce/configs": "^0.16.0",
-    "@bigcommerce/examples": "^0.19.2-alpha.0",
+    "@bigcommerce/examples": "^0.20.0",
     "@types/gtag.js": "^0.0.10",
     "@types/node": "^16.0.0",
     "@types/prettier": "^2.0.1",
