--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/big-design",
-  "version": "0.32.2-alpha.0",
+  "version": "0.33.0",
   "sideEffects": false,
   "main": "src/index.ts",
   "author": "BigCommerce Inc",
@@ -33,8 +33,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.15.4",
-    "@bigcommerce/big-design-icons": "^0.19.2-alpha.0",
-    "@bigcommerce/big-design-theme": "^0.15.1-alpha.0",
+    "@bigcommerce/big-design-icons": "^0.20.0",
+    "@bigcommerce/big-design-theme": "^0.16.0",
     "@popperjs/core": "^2.5.4",
     "@types/react-datepicker": "^4.4.2",
     "date-fns": "2.29.1",
