feat(deps): unfork from flag-icons dependency

--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -50,7 +50,6 @@
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.15.0",
     "@bigcommerce/configs": "^0.16.0",
-    "@jorgemoya/flag-icon-css": "3.5.0",
     "@svgr/core": "^5.0.1",
     "@svgr/plugin-jsx": "^5.0.1",
     "@svgr/plugin-prettier": "^5.0.1",
@@ -60,6 +59,7 @@
     "@types/styled-components": "^5.1.11",
     "babel-plugin-styled-components": "^2.0.2",
     "camelcase": "^6.2.0",
+    "flag-icons": "^6.6.6",
     "fs-extra": "^10.0.1",
     "glob": "^8.0.1",
     "glob-promise": "^5.0.0",
