fix(icons): downgrade 'camelcase' to 6.3.0

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,5 @@ updates:
         update-types: ['version-update:semver-major']
       - dependency-name: 'inquirer-autocomplete-prompt'
         update-types: ['version-update:semver-major']
+      - dependency-name: 'camelcase'
+        update-types: ['version-update:semver-major']
