--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -15,12 +15,12 @@
     "build:cjs": "NODE_ENV=production BABEL_ENV=cjs babel --extensions \".ts,.tsx\" ./src --out-dir ./dist/cjs",
     "build:es": "NODE_ENV=production BABEL_ENV=es babel --extensions \".ts,.tsx\" ./src --out-dir ./dist/es",
     "build:dt": "tsc -p tsconfig.declarations.json --emitDeclarationOnly",
-    "prepublishOnly": "rimraf dist && yarn run typeCheck && yarn run test && yarn run build",
+    "prepublishOnly": "rimraf dist && yarn run typecheck && yarn run test && yarn run build",
     "prepack": "big-design-prepack",
     "postpack": "big-design-postpack",
     "test": "jest",
     "test:watch": "yarn run test --watch",
-    "typeCheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit"
   },
   "files": [
     "dist"
