--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "build": "next build",
-    "deploy": "yarn run build && touch out/.nojekyll && push-dir --dir=out --branch=gh-pages --verbose",
+    "deploy": "pnpm run build && touch out/.nojekyll && push-dir --dir=out --branch=gh-pages --verbose",
     "start": "next",
     "typecheck": "tsc --noEmit"
   },
@@ -22,14 +22,15 @@
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/standalone": "^7.20.15",
-    "@bigcommerce/big-design": "^0.39.0",
-    "@bigcommerce/big-design-icons": "^0.26.0",
-    "@bigcommerce/big-design-theme": "^0.21.0",
+    "@bigcommerce/big-design": "workspace:^",
+    "@bigcommerce/big-design-icons": "workspace:^",
+    "@bigcommerce/big-design-theme": "workspace:^",
     "clipboard-copy": "^4.0.1",
     "next-transpile-modules": "^10.0.0",
     "prettier": "^2.4.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-live": "^4.1.6",
     "styled-components": "^5.3.5"
@@ -41,6 +42,7 @@
     "@types/node": "^20.12.2",
     "@types/prettier": "^2.0.1",
     "@types/react": "^18.2.73",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.2.23",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7",
