--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,49 +19,28 @@ filter_branch: &filter_branch
 # Commands
 #################################################################################
 commands:
-  yarn-install:
-    parameters:
-      cache-version:
-        type: string
-        default: v4
-        description: Change the cache version if you need to clear the cache for any reason.
-
-    steps:
-      - restore_cache:
-          keys:
-            - node-deps-<<parameters.cache-version>>-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
-            - node-deps-<<parameters.cache-version>>-{{ checksum "package.json" }}
-            - node-deps-<<parameters.cache-version>>
-
-      - run:
-          name: yarn install
-          command: |
-              CKSUM_BEFORE=$(cksum yarn.lock)
-              yarn install
-              CKSUM_AFTER=$(cksum yarn.lock)
-            
-              if [[ $CKSUM_BEFORE != $CKSUM_AFTER ]]; then
-                echo "yarn.lock was modified unexpectedly - terminating"
-                exit 1
-              fi
-      
-      - save_cache:
-          key: node-deps-<<parameters.cache-version>>-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
-          paths:
-            - node_modules
-            - packages/big-design/node_modules
-            - packages/big-design-theme/node_modules
-            - packages/big-design-icons/node_modules
-            - packages/configs/node_modules
-            - packages/docs/node_modules
-            - packages/examples/node_modules
-
   pre-setup:
     steps:
       - checkout
-      - node/install-yarn:
-          version: 1.22.19
-      - yarn-install
+      - restore_cache:
+          name: Restore pnpm Package Cache
+          keys:
+            - pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+      - run:
+          name: Install pnpm package manager
+          command: |
+            corepack enable
+            corepack prepare pnpm@latest-8 --activate
+            pnpm config set store-dir .pnpm-store
+      - run:
+          name: Install Dependencies
+          command: |
+            pnpm install
+      - save_cache:
+          name: Save pnpm Package Cache
+          key: pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+          paths:
+            - .pnpm-store
 
   attach-built-icons:
     steps:
@@ -89,7 +68,7 @@ jobs:
           keys:
             - big-design-icons-<<parameters.cache-version>>-{{ .Branch }}
             - big-design-icons-<<parameters.cache-version>>
-      - run: yarn workspace @bigcommerce/big-design-icons run build
+      - run: pnpm -F @bigcommerce/big-design-icons run build
       - save_cache:
           name: 'Saving build cache'
           key: big-design-icons-<<parameters.cache-version>>-{{ .Branch }}
@@ -106,7 +85,7 @@ jobs:
 
     steps:
       - pre-setup
-      - run: yarn workspace @bigcommerce/big-design-theme run build
+      - run: pnpm -F @bigcommerce/big-design-theme run build
 
   build-big-design:
     <<: *default_executor
@@ -114,7 +93,7 @@ jobs:
     steps:
       - pre-setup
       - attach-built-icons
-      - run: yarn workspace @bigcommerce/big-design run build
+      - run: pnpm -F @bigcommerce/big-design run build
 
   build-examples:
     <<: *default_executor
@@ -122,7 +101,7 @@ jobs:
     steps:
       - pre-setup
       - attach-built-icons
-      - run: yarn workspace @bigcommerce/examples run build
+      - run: pnpm -F @bigcommerce/examples run build
 
   build-docs:
     <<: *default_executor
@@ -138,12 +117,12 @@ jobs:
       - attach-built-icons
       - restore_cache:
           keys:
-            - nextjs-<<parameters.cache-version>>-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
+            - nextjs-<<parameters.cache-version>>-{{ checksum "package.json" }}-{{ checksum "pnpm-lock.yaml" }}
             - nextjs-<<parameters.cache-version>>-{{ checksum "package.json" }}
             - nextjs-<<parameters.cache-version>>
-      - run: yarn workspace @bigcommerce/docs run build
+      - run: pnpm -F @bigcommerce/docs run build
       - save_cache:
-          key: nextjs-<<parameters.cache-version>>-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
+          key: nextjs-<<parameters.cache-version>>-{{ checksum "package.json" }}-{{ checksum "pnpm-lock.yaml" }}
           paths:
             - packages/docs/.next
 
@@ -153,7 +132,7 @@ jobs:
     steps:
       - pre-setup
       - attach-built-icons
-      - run: yarn run typecheck
+      - run: pnpm run typecheck
 
   lint:
     <<: *default_executor
@@ -161,7 +140,7 @@ jobs:
     steps:
       - pre-setup
       - attach-built-icons
-      - run: yarn run lint
+      - run: pnpm run lint
 
   test:
     <<: *default_executor
@@ -169,7 +148,7 @@ jobs:
     steps:
       - pre-setup
       - attach-built-icons
-      - run: yarn run ci:test
+      - run: pnpm run ci:test
 
 #################################################################################
 # Workflows
