--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "big-design",
   "private": true,
   "license": "SEE LICENSE IN LICENSE.md",
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
     "build": "lerna run build --stream",
-    "build:icons": "yarn workspace @bigcommerce/big-design-icons run build",
+    "build:icons": "pnpm -F @bigcommerce/big-design-icons run build",
     "ci:test": "lerna run test --stream -- --maxWorkers=2 --coverage",
-    "diff": "lerna diff",
     "lint": "eslint . --ext .ts,.tsx,.js,.mdx",
-    "start": "yarn workspace @bigcommerce/docs run start",
+    "start": "pnpm -F @bigcommerce/docs run start",
     "test": "lerna run test --stream",
     "typecheck": "lerna run typecheck --stream",
     "prepare": "husky install"
