--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -8,9 +8,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@bigcommerce/big-design": "^0.39.0",
-    "@bigcommerce/big-design-icons": "^0.26.0",
-    "@bigcommerce/big-design-theme": "^0.21.0",
+    "@bigcommerce/big-design": "workspace:^",
+    "@bigcommerce/big-design-icons": "workspace:^",
+    "@bigcommerce/big-design-theme": "workspace:^",
     "formik": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +18,7 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/node": "^20.12.2",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
     "@types/styled-components": "^5.1.26",
