chore: update the commit message for changesets

--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -44,6 +44,7 @@ jobs:
         uses: changesets/action@v1
         with:
           publish: pnpm exec changeset publish
+          commit: "chore(release): publish"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
